--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -24,9 +24,9 @@ jobs:
         java-version: '8'
         distribution: 'temurin'
 
-    # Step 3: Build the project using Maven
-    - name: Build the project using Maven
-      run: mvn clean package
+    # Step 3: Compile the project using Maven
+    - name: Compile the project using Maven
+      run: mvn clean compile
 
     # Step 4: Run the Java application
     - name: Run the Java application
